# node-jpeg-turbo

./: .npmignore  CMakeLists.txt  README.md  index.js  module.d.ts  package.json
.github/workflows/: prebuild.yaml  test.yaml
src/: decompress.cc  exports.cc2  util.h
tests/: buffersize.spec.js  compress.spec.js  decompress.spec.js
